--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,14 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>Crm</title>
-
-
+  <title>CRM management</title>
   <link rel="shortcut icon" href="assets/images/favicon.ico">
-
-
   <link href="./assets/css/bootstrap.min.css" id="bootstrap-style" rel="stylesheet" type="text/css" />
-
   <link href="./assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-
   <link href="./assets/css/app.min.css" id="app-style" rel="stylesheet" type="text/css" />
   <link href="./assets/custom_css/custom.css" id="" rel="stylesheet" type="text/css" />
   <link href="./assets/custom_css/edit_custom.css" id="" rel="stylesheet" type="text/css" />
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
   <!-- font start -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,12 +29,10 @@
   </script>
   <!-- font end-->
   <!-- <script src="./assets/js/plugin.js"></script> -->
-
 </head>
 
 <body>
   <div id="root"></div>
-
 </body>
 
 </html>
